--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,8 +8,8 @@
     "noEmit": true,
     "esModuleInterop": true,
     "module": "esnext",
-//    "moduleResolution": "bundler",
-    "moduleResolution": "NodeNext",
+    "moduleResolution": "bundler",
+//    "moduleResolution": "NodeNext",
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
