--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,9 +7,9 @@
     "strict": true,
     "noEmit": true,
     "esModuleInterop": true,
-    "module": "esnext",
-    "moduleResolution": "bundler",
-//    "moduleResolution": "NodeNext",
+    "module": "NodeNext",
+//    "moduleResolution": "bundler",
+    "moduleResolution": "NodeNext",
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
