--- a/package.json
+++ b/package.json
@@ -11,21 +11,23 @@
   "dependencies": {
     "axios": "^1.7.2",
     "classnames": "^2.5.1",
+    "formidable": "^3.5.1",
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
     "react-spinners": "^0.13.8",
+    "ssh2-sftp-client": "^10.0.3",
     "uuid": "^10.0.0",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@biomejs/biome": "1.8.2",
+    "@types/formidable": "^3.4.5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/ssh2-sftp-client": "^9.0.3",
     "@types/uuid": "^10.0.0",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.4",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
