--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/react-dom": "^18",
     "@types/ssh2-sftp-client": "^9.0.3",
     "@types/uuid": "^10.0.0",
+    "node-loader": "^2.0.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
