--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "classnames": "^2.5.1",
     "formidable": "^3.5.1",
     "next": "14.2.4",
+    "node-scp": "^0.0.23",
     "react": "^18",
     "react-dom": "^18",
     "react-spinners": "^0.13.8",
+    "scp2": "^0.5.0",
     "ssh2-sftp-client": "^10.0.3",
     "uuid": "^10.0.0",
     "zustand": "^4.5.2"
