--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "node-scp": "^0.0.23",
     "react": "^18",
     "react-dom": "^18",
+    "react-image-file-resizer": "^0.4.8",
     "react-spinners": "^0.13.8",
     "uuid": "^10.0.0",
     "zustand": "^4.5.2"
